2008-02-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	As the panel sets the shadow to NONE too, we do not need a special
	case for it anymore.

2008-02-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added a small comment to the handlebox/toolbar special case.

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Removed a "&" that caused this special case not to work
	The second toolbar of file-roller is still not working

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Managed handlebox_bin and dockitem_bin special cases
	for toolbar's shadow-type
	To use this setting place this in the gtkrc:
	GtkMenuBar::shadow_type = GTK_SHADOW_NONE
	GtkToolbar::shadow_type = GTK_SHADOW_NONE

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Removed the test case for the gtkrc.
	Ok flat menubars and toolbars works in a sane way, except
	few applications with detachable toolbars.
	Need to investigate on it.
	PS: on the previous commit I forgot (yes I forgot :P) to say
	I've reverted the menuitems to their nicer behaviour ;-)

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_menuitem):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Should read shadow... works on buttons but not for toolbars.
	Modded gtkrc to TEST.

2008-02-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/mist/src/mist-style.c: (mist_style_draw_check),
	(mist_style_draw_option):
	I guess thix should fix 500952, but it's just a 30 seconds patch :)

2008-01-31  Andrea Cimitan  <andrea.cimitan@gmail.com>
